--- a/html/app.html
+++ b/html/app.html
@@ -2,27 +2,38 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Factorio Blueprint Library</title>
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/factorio.css">
-    <script type="module" src="src/app.js"></script>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Factorio Blueprint Library</title>
+	<link rel="stylesheet"
+		href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+	<link rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+		integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="styles/factorio.css">
+	<script type="module" src="src/app.js"></script>
 </head>
 
 <body class="has-background-dark has-text-light">
-    <!-- Navbar  -->
-    <factorio-header data-active="app"></factorio-header>
-    <factorio-panel-light><span slot="title"><button class="button is-primary" id="search-btn">Search</button><input type="text" class="input inline mx-2" placeholder="Search by name..." id="search"><input type="number" id="search-limit" class="input inline" placeholder="limit"></span>
-        <span slot="content" id="output">
-            Results go here.
-        </span></factorio-panel-light>
+	<!-- Navbar  -->
+	<factorio-header data-active="app"></factorio-header>
+	<factorio-panel-light>
+		<span slot="title">
+			<button class="button is-primary" id="search-btn">Search</button>
+			<input type="text" class="input inline mx-2" placeholder="Search by name..."
+				id="search">
+			<input type="number" id="search-limit" class="input inline" placeholder="limit">
+			<button class="button ml-auto is-warning" id="login-btn">
+				<span id="logged-in-account">Not logged in</span>
+				<i id="user-icon" class="ml-1 fa-solid fa-user"></i>
+			</button>
+		</span>
+		<span slot="content" id="output">
+			Results go here.
+		</span>
+	</factorio-panel-light>
 </body>
 
 </html>
