--- a/html/app.html
+++ b/html/app.html
@@ -26,7 +26,7 @@
 				id="search">
 			<input type="number" id="search-limit" class="input inline" placeholder="limit">
 			<button class="button ml-auto is-warning" id="login-btn">
-				<span id="logged-in-account">Not logged in</span>
+				<span id="logged-in-account">Log in</span>
 				<i id="user-icon" class="ml-1 fa-solid fa-user"></i>
 			</button>
 		</span>
@@ -34,6 +34,18 @@
 			Results go here.
 		</span>
 	</factorio-panel-light>
+    <div id="login-form" class="hidden">
+        <factorio-panel-light>
+            <span slot="title">Login</span>
+            <div slot="content">
+                <p>Note: Please don't reuse your bank login, I'm not a security expert...</p>
+                <input type="text" class="input" id="username-in" placeholder="Username">
+                <input type="password" class="input" id="password-in" placeholder="Password">
+                <button id="login-submit" class="button is-primary">Login</button>
+                <button class="button" title="New accounts not available yet" disabled>Create account</button>
+            </div>
+        </factorio-panel-light>
+    </div>
 </body>
 
 </html>
