change placeholder text

--- a/html/app.html
+++ b/html/app.html
@@ -32,7 +32,7 @@
 			</button>
 		</span>
 		<span slot="content" id="output">
-			Results go here.
+			Results go here. Search with an empty query for all items.
 		</span>
 	</factorio-panel-light>
     <div id="login-form" class="hidden popup">
