--- a/html/favorites.html
+++ b/html/favorites.html
@@ -8,18 +8,56 @@
     <title>Factorio Blueprint Library</title>
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+		integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/factorio.css">
-    <script type="module" src="src/factorio-header.js"></script>
+    <script type="module" src="src/favorites.js"></script>
 </head>
 
 <body class="has-background-dark has-text-light">
     <!-- Navbar  -->
     <factorio-header data-active="favorites"></factorio-header>
-    "no specific content is required, but some placeholder text or UI would be nice" and i am kinda out of time so im going with option A: no placeholder ui
+    <factorio-panel-light>
+		<span slot="title">
+			<button class="button is-danger" id="clear-local-btn">Clear all local favorites</button>
+            <button class="button is-danger" title="Must be logged in" id="clear-server-btn" disabled>Clear all cloud favorites</button>
+			<!-- maybe ill add a way to search through favs if needed <input type="text" class="input inline mx-2" placeholder="Search by name..."
+				id="search"> -->
+			<input type="number" id="search-limit" class="input inline" placeholder="limit">
+            <button class="button is-primary" id="refresh-btn"><i class="fa-solid fa-arrows-rotate"></i></button>
+            <button class="button ml-auto is-warning" id="login-btn">
+				<span id="logged-in-account">Log in</span>
+				<i id="user-icon" class="ml-1 fa-solid fa-user"></i>
+			</button>
+		</span>
+		<span slot="content" id="output">
+			Results go here.
+		</span>
+	</factorio-panel-light>
+    <div id="login-form" class="hidden popup">
+        <factorio-panel-light>
+            <span slot="title">Login</span>
+            <div slot="content">
+                <p>Note: Please don't reuse your bank login, I'm not a security expert...</p>
+                <input type="text" class="input" id="username-in" placeholder="Username">
+                <input type="password" class="input" id="password-in" placeholder="Password">
+                <button id="login-submit" class="button is-primary">Login</button>
+                <button class="button" title="New accounts not available yet" disabled>Create account</button>
+            </div>
+        </factorio-panel-light>
+    </div>
+    <div id="confirm-form" class="hidden popup">
+        <factorio-panel-light>
+            <span slot="title">Are you sure?</span>
+            <div slot="content">
+                <p id="confirm-prompt"></p>
+                <button id="confirm-btn" class="button is-primary">Confirm</button>
+                <button id="cancel-btn" class="button is-warning">Cancel</button>
+            </div>
+        </factorio-panel-light>
+    </div>
 </body>
 
 </html>
