--- a/html/documentation.html
+++ b/html/documentation.html
@@ -6,6 +6,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Factorio Blueprint Library</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet"
 		href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 	<link rel="stylesheet"
@@ -326,7 +331,7 @@
 					<tr>
 						<td><strong>C. Design &amp; Interaction</strong></td>
 						<td><strong>20</strong></td>
-						<td>10</td>
+						<td>15</td>
 					</tr>
 					<tr>
 						<td>1. Global Navigation System with "you are here" cues:</td>
@@ -387,7 +392,7 @@
 					<tr>
 						<td>- <em>Missing embedded font</em></td>
 						<td><em>(-5)</em></td>
-						<td>-5</td>
+						<td>-0</td>
 					</tr>
 					<tr>
 						<td>- <em>Bulma not used or utilized ineffectively</em></td>
@@ -542,7 +547,7 @@
 					<tr>
 						<td><strong>Maximum Possible Total Points</strong></td>
 						<td><strong>100</strong></td>
-						<td>74.5</td>
+						<td>79.5</td>
 					</tr>
 					<tr>
 						<td><strong>Deductions</strong></td>
@@ -615,9 +620,6 @@
 				</li>
 				<li>
 					more solid error handling
-				</li>
-				<li>
-					embedded font
 				</li>
 				<li>
 					code cleanup
