--- a/html/home.html
+++ b/html/home.html
@@ -6,6 +6,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Factorio Blueprint Library</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet"
 		href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 	<link rel="stylesheet"
@@ -26,9 +31,8 @@
 			<h2 class="subtitle has-text-light">Factorio Blueprint Library</h2>
 		</div>
 		<div class="hero-body panel-inset">
-			<img style="float:right;width:40%"
-            src="images/Blueprint-example-03.png"
-            alt="factorio blueprint ui">
+			<img style="float:right;width:40%" src="images/Blueprint-example-03.png"
+				alt="factorio blueprint ui">
 			<p>
 				The Factorio blueprint library is a central place to browse, upload,
 				and obtain blueprints for your factory. With tools to easily search
