added cloud favorites clearing

--- a/html/documentation.html
+++ b/html/documentation.html
@@ -242,7 +242,7 @@
 					<tr>
 						<td><strong>A. Functionality - App &amp; Favorites Pages</strong></td>
 						<td><strong>40</strong></td>
-						<td>37.5</td>
+						<td>40</td>
 					</tr>
 					<tr>
 						<td>1. App Page implements all required functional requirements</td>
@@ -311,7 +311,7 @@
 					<tr>
 						<td>- <em>Missing Favorites "Delete" button (Favorites Page)</em></td>
 						<td><em>(-5)</em></td>
-						<td>-2.5</td>
+						<td>-0</td>
 					</tr>
 					<tr>
 						<td><strong>B. Content - Home &amp; Documentation Pages</strong></td>
@@ -547,7 +547,7 @@
 					<tr>
 						<td><strong>Maximum Possible Total Points</strong></td>
 						<td><strong>100</strong></td>
-						<td>79.5</td>
+						<td>82</td>
 					</tr>
 					<tr>
 						<td><strong>Deductions</strong></td>
@@ -589,9 +589,6 @@
 					add message if no results or favorites found
 				</li>
 				<li>
-					add clearing of cloud Favorites
-				</li>
-				<li>
 					add tooltips to all the things
 				</li>
 				<li>
@@ -623,6 +620,9 @@
 				</li>
 				<li>
 					code cleanup
+				</li>
+				<li>
+					better handling when a login expires
 				</li>
 			</ul>
 		</div>
