--- a/html/favorites.html
+++ b/html/favorites.html
@@ -36,30 +36,12 @@
                 placeholder="limit">
             <button class="button is-primary" id="refresh-btn"><i
                     class="fa-solid fa-arrows-rotate"></i></button>
-            <button class="button ml-auto is-warning" id="login-btn">
-                <span id="logged-in-account">Log in</span>
-                <i id="user-icon" class="ml-1 fa-solid fa-user"></i>
-            </button>
+            <app-login></app-login>
         </span>
         <span slot="content" id="output">
             Results go here.
         </span>
     </factorio-panel-light>
-    <div id="login-form" class="hidden popup">
-        <factorio-panel-light>
-            <span slot="title">Login</span>
-            <div slot="content">
-                <p>Note: Please don't reuse your bank login, I'm not a security expert...
-                </p>
-                <input type="text" class="input" id="username-in" placeholder="Username">
-                <input type="password" class="input" id="password-in"
-                    placeholder="Password">
-                <button id="login-submit" class="button is-primary">Login</button>
-                <button class="button" title="New accounts not available yet"
-                    disabled>Create account</button>
-            </div>
-        </factorio-panel-light>
-    </div>
     <div id="confirm-form" class="hidden popup">
         <factorio-panel-light>
             <span slot="title">Are you sure?</span>
