--- a/html/documentation.html
+++ b/html/documentation.html
@@ -419,7 +419,8 @@
 					<tr>
 						<td>- <em>User errors NOT handled gracefully</em></td>
 						<td><em>(-?)</em></td>
-						<td>-3</td>
+						<td>-3 Reason: A few edge cases for input data are not handled and will just
+							load until the request times out. I counted 3 of these so 3 points.</td>
 					</tr>
 					<tr>
 						<td>- <em>App NOT intuitive to use</em></td>
@@ -490,7 +491,7 @@
 					<tr>
 						<td>- <em>Code Conventions NOT followed</em></td>
 						<td><em>(-1 to -5 per incident)</em></td>
-						<td>-3 for non DRY or sloppy</td>
+						<td>-0</td>
 					</tr>
 					<tr>
 						<td>- <em>Code shows errors in console</em></td>
@@ -531,7 +532,8 @@
 					<tr>
 						<td>- <em>App functionality and programming goes beyond what we did in
 								class</em></td>
-						<td><em>(+1 to +10)</em> see noteworthy section</td>
+						<td><em>(+1 to +10)</em> see noteworthy section. Custom, self-hosted mongodb
+							database and nodejs api as well as a login and account system.</td>
 						<td>+10</td>
 					</tr>
 					<tr>
@@ -547,7 +549,7 @@
 					<tr>
 						<td><strong>Maximum Possible Total Points</strong></td>
 						<td><strong>100</strong></td>
-						<td>87</td>
+						<td>90</td>
 					</tr>
 					<tr>
 						<td><strong>Deductions</strong></td>
@@ -611,9 +613,6 @@
 				</li>
 				<li>
 					more solid error handling
-				</li>
-				<li>
-					code cleanup
 				</li>
 				<li>
 					better handling when a login expires
