added copy of export

--- a/html/documentation.html
+++ b/html/documentation.html
@@ -167,6 +167,11 @@
 					book were used to figure out the server side of CORS compliance.
 				</li>
 				<li>
+					<a
+						href="https://stackoverflow.com/questions/400212/how-do-i-copy-to-the-clipboard-in-javascript">This</a>
+					stackoverflow article.
+				</li>
+				<li>
 					The <a href="https://www.factorio.com/">Factorio website</a> and the
 					<a href="https://store.steampowered.com/app/427520/Factorio/">Factorio game</a>
 					itself are used as the basis for the app's entire concept as well
