--- a/client/apidocs.html
+++ b/client/apidocs.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>API Docs - Factorio Library</title>
 
-  <link rel="stylesheet" href="styles/docs.css">
+  <link rel="stylesheet" href="/styles/docs.css">
 </head>
 
 <body>
